--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "buefy": "^0.8.10",
     "core-js": "^3.4.4",
+    "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
+    "tailwindcss": "^1.1.4",
     "vue": "^2.6.10",
+    "vue-json-tree-view": "^2.1.4",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.3",
+    "vue2-filters": "^0.9.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -26,8 +33,10 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "mixitup": "^3.3.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-tailwind": "^1.1.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
